# evm-benchmark

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  coverage.yml  release.yml
bench-targets/: run-comparison.sh  test-suite.sh
bench-targets/chains/arbitrum/: Makefile  README.md  run-bench.sh
bench-targets/chains/avalanche/: Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  run-bench.sh
bench-targets/network-topology/: README.md  apply-chaos.sh  chaos.sh  network-topology.sh  profiles.env  run-comparison-bench.sh
bench-targets/scripts/: bench.sh  compare.sh  lib.sh  meta.sh  results.sh  sweep-profiles.sh  sweep.sh
contracts/: README.md  foundry.toml
crates/evm-benchmark/: Cargo.toml
crates/evm-benchmark/benches/: signing.rs  submission.rs
crates/evm-benchmark/bytecode/: BenchmarkNFT.hex  BenchmarkPair.hex  BenchmarkToken.hex
crates/evm-benchmark/src/: cache.rs  config.rs  errors.rs  funding.rs  lib.rs  main.rs  metrics.rs  setup.rs  types.rs
crates/evm-benchmark/src/analytics/: analysis_engine.rs  bottleneck_detector.rs  metrics_collector.rs  mod.rs  prometheus_integration.rs  recommendations.rs  regression_detector.rs
crates/evm-benchmark/src/analytics/reports/: ascii_report.rs  html_report.rs  json_report.rs  markdown_report.rs  mod.rs  report_types.rs
crates/evm-benchmark/src/generators/: contract_deploy.rs  evm_mix.rs  mod.rs  simple_transfer.rs
crates/evm-benchmark/src/modes/: burst.rs  ceiling.rs  mod.rs  sustained.rs
crates/evm-benchmark/src/reporting/: json.rs  mod.rs  stats.rs
crates/evm-benchmark/src/signing/: batch.rs  mod.rs
crates/evm-benchmark/src/submission/: block_tracker.rs  dispatcher.rs  mod.rs  rpc.rs  rpc_dispatcher.rs  tracking.rs  ws_submitter.rs
crates/evm-benchmark/src/validators/: health_monitor.rs  mod.rs
crates/evm-benchmark/tests/: cli_main.rs  e2e_validation.rs  integration_submission.rs
docs/: bench-target-results.md  evm-benchmark-features.md  evm-benchmark.md
npm/evm-benchmark/: README.md  package.json
(+60 files in other folders)
